--- a/_config.yml
+++ b/_config.yml
@@ -21,6 +21,7 @@
 title: "TEST"
 email: "test@test.com"
 description: "123"
+base_url: "/benimsayfam"
 url: "https://rainstest.github.io"
 github_username: "rainstest"
 
