--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ email: "test@test.com"
 description: "123"
 
 # Build settings
-theme: just-the-docs
+theme: jekyll-theme-minimal
 
 # Enable or disable the site search
 # Supports true (default) or false
