--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ email: "test@test.com"
 description: "123"
 
 # Build settings1
-theme: just-the-docs
+remote_theme: just-the-docs
 
 # Enable or disable the site search
 # Supports true (default) or false
